--- a/project/project5.html
+++ b/project/project5.html
@@ -10,20 +10,18 @@
 
   <header>
     <nav>
-      <a href="#">Resume</a>
-      <a href="#">Other Works</a>
+      <a href="project5b.html">Resume</a>
+      <a href="project5c.html">Photography</a>
     </nav>
   </header>
 
   <section class="hero">
     <h2>André C. Clause</h2>
-    <button>Button</button>
   </section>
 
   <section class="section about">
     <div class="about-left">
       <h3>About</h3>
-      <p>Summary</p>
     </div>
     <div class="about-right">
       <div class="image-placeholder">
@@ -41,7 +39,9 @@
     <p>Summary</p>
 
     <div class="hobby-card">
-      <div class="icon"></div>
+      <div class="icon">
+        <img src="../images/IMG_0308.jpeg" alt="lacrossephoto" width="100" height="100">
+      </div>
       <div>
         <h4>Lacrosse</h4>
         <p>I have been playing lacrosse for over 10 years and currently play for Tuscarora Jr. B Box lacrosse and Syracuse's Club Lacrossse Team</p>
@@ -49,7 +49,9 @@
     </div>
 
     <div class="hobby-card">
-      <div class="icon"></div>
+      <div class="icon">
+        <img src="../images/222B5462-1ED6-4688-8EAC-FA43A12C7752.JPG" alt="skyphoto" width="100" height="100">
+      </div>
       <div>
         <h4>Photography</h4>
         <p>Photography is one of my many artistic passions that I have persued since elementary school when I started my first photography social media account.</p>
@@ -57,7 +59,9 @@
     </div>
 
     <div class="hobby-card">
-      <div class="icon"></div>
+      <div class="icon">
+        <img src="../images/EB3FADDB-CEA2-47E2-B2D1-375343ADF798.jpg" alt="liftingphoto" width="100" height="100">
+    </div>
       <div>
         <h4>Lifting</h4>
         <p>I am an avid power builder - My maxes on the main three are as follows - Bench 405, Squat 505, Deadlift 600</p>
