--- a/project/project5c.html
+++ b/project/project5c.html
@@ -3,103 +3,75 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Photography | Andre Clause</title>
+  <title>Photography Gallery</title>
   <link rel="stylesheet" href="styles.css" />
-  <script>
-    document.querySelectorAll('.carousel-wrapper').forEach(wrapper => {
-      const carousel = wrapper.querySelector('.carousel');
-      const leftBtn = wrapper.querySelector('.carousel-btn.left');
-      const rightBtn = wrapper.querySelector('.carousel-btn.right');
-  
-      const scrollAmount = carousel.offsetWidth; // scroll by one full view
-  
-      leftBtn.addEventListener('click', () => {
-        carousel.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
-      });
-  
-      rightBtn.addEventListener('click', () => {
-        carousel.scrollBy({ left: scrollAmount, behavior: 'smooth' });
-      });
-    });
-  </script>
 </head>
 <body>
-
   <header>
     <nav>
       <a href="project5.html">Home</a>
-      <a href="project5b.html">Resume</a>
+      <a href="resume.html">Resume</a>
     </nav>
   </header>
 
-  <section class="section">
-    <h1>Photography</h1>
-    <p>Swipe through each set to explore different aspects of my photography work.</p>
+  <section class="hero">
+    <h1>Photography Gallery</h1>
+  </section>
 
-    <div class="photo-grid">
-      <!-- California Set -->
-      <div class="photo-card top-left">
-        <div class="carousel">
-          <img src="../images/projectphotos/california1.jpg" alt="California 1" />
-          <img src="../images/projectphotos/california2.jpg" alt="California 2" />
-          <img src="../images/projectphotos/california3.jpg" alt="California 3" />
-          <img src="../images/projectphotos/california4.jpg" alt="California 4" />
-        </div>
-        <div class="overlay-text">California Adventures</div>
+  <section class="photo-gallery">
+    <div class="photo-card">
+      <div class="carousel">
+        <img src="../images/projectphotos/california1.jpeg" alt="California 1">
+        <img src="../images/projectphotos/california2.jpeg" alt="California 2">
+        <img src="../images/projectphotos/california3.jpeg" alt="California 3">
+        <img src="../images/projectphotos/california4.jpeg" alt="California 4">
       </div>
-
-      <!-- Nature Set -->
-      <div class="photo-card top-right">
-        <div class="carousel">
-          <img src="../images/projectphotos/nature.jpeg" alt="Nature 1" />
-          <img src="../images/projectphotos/nature2.jpeg" alt="Nature 2" />
-          <img src="../images/projectphotos/nature3.jpeg" alt="Nature 3" />
-          <img src="../images/projectphotos/nature4.jpeg" alt="Nature 4" />
-        </div>
-        <div class="overlay-text">Nature Escape</div>
+      <div class="overlay-text">California</div>
+    </div>
+    <div class="photo-card">
+      <div class="carousel">
+        <img src="../images/projectphotos/offriends1.jpeg" alt="Friends 1">
+        <img src="../images/projectphotos/offriends2.jpeg" alt="Friends 2">
+        <img src="../images/projectphotos/offriends3.jpeg" alt="Friends 3">
+        <img src="../images/projectphotos/offriends4.jpeg" alt="Friends 4">
       </div>
-
-      <!-- Of Friends Set -->
-      <div class="photo-card bottom-left">
-        <div class="carousel">
-          <img src="../images/projectphotos/offriends1.jpg" alt="Friends 1" />
-          <img src="../images/projectphotos/offriends2.jpg" alt="Friends 2" />
-          <img src="../images/projectphotos/offriends3.jpg" alt="Friends 3" />
-          <img src="../images/projectphotos/offriends4.jpg" alt="Friends 4" />
-        </div>
-        <div class="overlay-text">With Friends</div>
+      <div class="overlay-text">Friends</div>
+    </div>
+    <div class="photo-card">
+      <div class="carousel">
+        <img src="../images/projectphotos/ofme1.jpeg" alt="Me 1">
+        <img src="../images/projectphotos/ofme2.jpeg" alt="Me 2">
+        <img src="../images/projectphotos/ofme3.jpeg" alt="Me 3">
+        <img src="../images/projectphotos/ofme4.jpeg" alt="Me 4">
       </div>
-
-      <!-- Of Me Set -->
-      <div class="photo-card bottom-right">
-        <div class="carousel">
-          <img src="../images/projectphotos/ofme1.jpeg" alt="Me 1" />
-          <img src="../images/projectphotos/ofme2.jpg" alt="Me 2" />
-          <img src="../images/projectphotos/ofme3.jpg" alt="Me 3" />
-          <img src="../images/projectphotos/ofme4.jpg" alt="Me 4" />
-        </div>
-        <div class="overlay-text">Captured Moments</div>
+      <div class="overlay-text">Me</div>
+    </div>
+    <div class="photo-card">
+      <div class="carousel">
+        <img src="../images/projectphotos/nature1.jpeg" alt="Nature 1">
+        <img src="../images/projectphotos/nature2.jpeg" alt="Nature 2">
+        <img src="../images/projectphotos/nature3.jpeg" alt="Nature 3">
+        <img src="../images/projectphotos/nature4.jpeg" alt="Nature 4">
       </div>
-      <div class="photo-card bottom-left">
-        <div class="overlay-text">Silvercreek</div>
-        <div class="carousel">
-          <img src="../images/projectphotos/silvercreek1.jpg" alt="Silvercreek 1">
-          <img src="../images/projectphotos/silvercreek2.jpg" alt="Silvercreek 2">
-          <img src="../images/projectphotos/silvercreek3.jpg" alt="Silvercreek 3">
-          <img src="../images/projectphotos/silvercreek4.jpg" alt="Silvercreek 4">
-        </div>
+      <div class="overlay-text">Nature</div>
+    </div>
+    <div class="photo-card">
+      <div class="carousel">
+        <img src="../images/projectphotos/silvercreek1.jpeg" alt="Silvercreek 1">
+        <img src="../images/projectphotos/silvercreek2.jpeg" alt="Silvercreek 2">
+        <img src="../images/projectphotos/silvercreek3.jpeg" alt="Silvercreek 3">
+        <img src="../images/projectphotos/silvercreek4.jpeg" alt="Silvercreek 4">
       </div>
-      
-      <!-- Montreal Carousel -->
-      <div class="photo-card bottom-right">
-        <div class="overlay-text">Montreal</div>
-        <div class="carousel">
-          <img src="../images/projectphotos/montreal1.jpg" alt="Montreal 1">
-          <img src="../images/projectphotos/montreal2.jpg" alt="Montreal 2">
-          <img src="../images/projectphotos/montreal3.jpg" alt="Montreal 3">
-          <img src="../images/projectphotos/montreal4.jpg" alt="Montreal 4">
-        </div>
+      <div class="overlay-text">Silvercreek</div>
+    </div>
+    <div class="photo-card">
+      <div class="carousel">
+        <img src="../images/projectphotos/montreal1.jpeg" alt="Montreal 1">
+        <img src="../images/projectphotos/montreal2.jpeg" alt="Montreal 2">
+        <img src="../images/projectphotos/montreal3.jpeg" alt="Montreal 3">
+        <img src="../images/projectphotos/montreal4.jpeg" alt="Montreal 4">
       </div>
+      <div class="overlay-text">Montreal</div>
     </div>
   </section>
 
@@ -109,6 +81,7 @@
         <h5>Socials</h5>
         <ul>
           <li><a href="https://www.instagram.com/andreclause/">Instagram</a></li>
+          <li><a href="https://www.linkedin.com/in/andreclause1">LinkedIn</a></li>
         </ul>
       </div>
       <div>
@@ -119,8 +92,5 @@
       </div>
     </div>
   </footer>
-
 </body>
 </html>
-
-
