--- a/project/project5c.html
+++ b/project/project5c.html
@@ -5,6 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Photography Gallery</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+.container {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-image: url('your-image.jpg'); /* Your background image */
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+  z-index: 5;
+}
+
+.overlay-text {
+  position: absolute;
+  bottom: 20px;  /* 20px from the bottom */
+  right: 20px;   /* 20px from the right */
+  color: white;
+  font-size: 16px;
+  z-index: 10;
+}
+  </style>
 </head>
 <body>
   <header>
