--- a/EEE457/Mainpage.html
+++ b/EEE457/Mainpage.html
@@ -1,10 +1,125 @@
 <!DOCTYPE html>
-<Html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>ORLA</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Orla Landing Page</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', Arial, sans-serif;
+      background-color: #ffffff;
+      color: #002244;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      padding: 16px 40px;
+      background-color: #0b1f3a;
+      color: white;
+      align-items: center;
+    }
+    .logo {
+      font-size: 24px;
+      font-weight: 700;
+    }
+    .language-select {
+      font-size: 14px;
+      cursor: pointer;
+    }
+    .content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 60px 40px;
+      gap: 60px;
+      flex-wrap: wrap;
+    }
+    .text-section h1 {
+      font-size: 48px;
+      font-weight: 600;
+      line-height: 1.3;
+    }
+    .text-section span {
+      color: #3fb3a3;
+    }
+    .buttons {
+      margin-top: 24px;
+      display: flex;
+      gap: 16px;
+    }
+    button {
+      padding: 12px 28px;
+      border-radius: 24px;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    .primary-btn {
+      background-color: #003366;
+      color: white;
+    }
+    .secondary-btn {
+      background-color: #f1f1f1;
+      color: #003366;
+      border: 2px solid #003366;
+    }
+    .image-box {
+      width: 300px;
+      height: 300px;
+      border-radius: 32px;
+      border: 2px dashed #999;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    footer {
+      text-align: center;
+      padding: 20px 0;
+      background-color: #eef7ff;
+    }
+    .flags {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      padding: 20px 0;
+    }
+    .flags img {
+      width: 60px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <div class="logo">orla</div>
+    <div class="language-select">🌐 English</div>
+  </header>
 
+  <div class="content">
+    <div class="text-section">
+      <h1>Learn a language,<br>Meet the <span>world.</span></h1>
+      <div class="buttons">
+        <button class="primary-btn">Get Started</button>
+        <button class="secondary-btn">I already have an account</button>
+      </div>
+    </div>
+
+    <div class="image-box">
+      image<br>placeholder
+    </div>
+  </div>
+
+  <footer>
+    <p>I want to learn...</p>
+    <div class="flags">
+      <img src="https://flagcdn.com/us.svg" alt="English">
+      <img src="https://flagcdn.com/es.svg" alt="Spanish">
+      <img src="https://flagcdn.com/fr.svg" alt="French">
+      <img src="https://flagcdn.com/cn.svg" alt="Chinese">
+      <img src="https://flagcdn.com/un.svg" alt="Other">
+    </div>
+  </footer>
 </body>
-</Html>
+</html>
